--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
+    "start": "tsc && node dist/index.js",
+    "prod": "node dist/index.js",
     "eslint": "eslint src --ext ts"
   },
   "repository": {
