--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
     "start": "tsc && node dist/index.js",
+    "dev": "node_modules/.bin/tsnd src/index.ts",
     "prod": "node dist/index.js",
     "eslint": "eslint src --ext ts"
   },
