--- a/package.json
+++ b/package.json
@@ -28,15 +28,17 @@
   "homepage": "https://gitlab.com/barricas/awesome-teamspeak#readme",
   "dependencies": {
     "@types/node": "^13.1.8",
+    "randomstring": "^1.1.5",
     "ts3-nodejs-library": "^2.3.2",
     "typescript": "^3.7.5"
   },
   "devDependencies": {
-    "eslint-plugin-import": "^2.20.0",
+    "@types/randomstring": "^1.1.6",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
     "@typescript-eslint/parser": "^2.16.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.20.0",
     "ts-node-dev": "^1.0.0-pre.44"
   }
 }
