--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
   },
   "homepage": "https://gitlab.com/barricas/awesome-teamspeak#readme",
   "dependencies": {
-    "@types/node": "^13.1.8",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "randomstring": "^1.1.5",
     "ts3-nodejs-library": "^2.3.3",
     "typescript": "^3.7.5"
   },
   "devDependencies": {
+    "@types/express": "^4.17.2",
+    "@types/node": "^13.1.8",
     "@types/randomstring": "^1.1.6",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
     "@typescript-eslint/parser": "^2.16.0",
