--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tsc": "tsc",
-    "start": "tsc && node dist/index.js",
+    "tsc": "rimraf dist && tsc",
+    "start": "rimraf dist && tsc && node dist/index.js",
     "dev": "node_modules/.bin/tsnd src/index.ts",
     "prod": "node dist/index.js",
     "eslint": "eslint src --ext ts"
@@ -30,8 +30,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "randomstring": "^1.1.5",
-    "ts3-nodejs-library": "^2.3.3",
-    "typescript": "^3.7.5"
+    "ts3-nodejs-library": "^2.3.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
@@ -39,9 +38,11 @@
     "@types/randomstring": "^1.1.6",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
     "@typescript-eslint/parser": "^2.16.0",
+    "typescript": "^3.7.5",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.20.0",
-    "ts-node-dev": "^1.0.0-pre.44"
+    "ts-node-dev": "^1.0.0-pre.44",
+    "rimraf": "^3.0.1"
   }
 }
