Add getCrawls to repo & do some refactoring. Initialize empty file if none exists. Add spacer separator to zone config. Rework logic to save crawls and channels to repo.

--- a/server_configs/server.cfg.example
+++ b/server_configs/server.cfg.example
@@ -13,12 +13,14 @@
         "zones": [
             {
                 "name": "regular",
+                "spacerAsSeparator": false,
                 "start": 10,
                 "end": 15,
                 "timeEmpty": 3600
             },
             {
                 "name": "vip",
+                "spacerAsSeparator": true,
                 "start": 20,
                 "end": 30,
                 "timeEmpty": 7200
