Move crawler result processing into a class. Create event handlers for raised events within the bot with crawler notify example.

--- a/server_configs/server.cfg.example
+++ b/server_configs/server.cfg.example
@@ -16,14 +16,16 @@
                 "spacerAsSeparator": false,
                 "start": 10,
                 "end": 15,
-                "timeEmpty": 3600
+                "timeInactiveNotify": 2000,
+                "timeInactiveMax": 3600
             },
             {
                 "name": "vip",
                 "spacerAsSeparator": true,
                 "start": 20,
                 "end": 30,
-                "timeEmpty": 7200
+                "timeInactiveNotify": 5000,
+                "timeInactiveMax": 7200
             }
         ]
     }
