--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://gitlab.com/barricas/awesome-teamspeak#readme",
   "dependencies": {
+    "awilix": "^4.2.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "randomstring": "^1.1.5",
@@ -34,15 +35,16 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
+    "@types/glob": "^7.1.1",
     "@types/node": "^13.1.8",
     "@types/randomstring": "^1.1.6",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
     "@typescript-eslint/parser": "^2.16.0",
-    "typescript": "^3.7.5",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.20.0",
+    "rimraf": "^3.0.1",
     "ts-node-dev": "^1.0.0-pre.44",
-    "rimraf": "^3.0.1"
+    "typescript": "^3.7.5"
   }
 }
