--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://gitlab.com/barricas/awesome-teamspeak#readme",
   "dependencies": {
+    "@hapi/joi": "^17.1.0",
     "awilix": "^4.2.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@types/express": "^4.17.2",
     "@types/glob": "^7.1.1",
+    "@types/hapi__joi": "^16.0.12",
     "@types/node": "^13.1.8",
     "@types/randomstring": "^1.1.6",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
