--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "farmhash": "^3.0.0",
+    "lodash": "^4.17.15",
     "randomstring": "^1.1.5",
     "ts3-nodejs-library": "^2.3.3"
   },
@@ -39,6 +40,7 @@
     "@types/express": "^4.17.2",
     "@types/glob": "^7.1.1",
     "@types/hapi__joi": "^16.0.12",
+    "@types/lodash": "^4.14.149",
     "@types/node": "^13.1.8",
     "@types/randomstring": "^1.1.6",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
