Add logging library

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,8 @@
             "program": "${workspaceFolder}\\dist\\init.js",
             "outFiles": [
                 "${workspaceFolder}/**/*.js"
-            ]
+            ],
+            "outputCapture": "std",
         }
     ]
 }
