--- a/package.json
+++ b/package.json
@@ -31,17 +31,21 @@
     "awilix": "^4.2.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-pino-logger": "^4.0.0",
     "farmhash": "^3.0.0",
     "lodash": "^4.17.15",
+    "pino": "^5.17.0",
     "randomstring": "^1.1.5",
     "ts3-nodejs-library": "^2.3.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
+    "@types/express-pino-logger": "^4.0.2",
     "@types/glob": "^7.1.1",
     "@types/hapi__joi": "^16.0.12",
     "@types/lodash": "^4.14.149",
     "@types/node": "^13.1.8",
+    "@types/pino": "^5.17.0",
     "@types/randomstring": "^1.1.6",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
     "@typescript-eslint/parser": "^2.16.0",
