--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-pino-logger": "^4.0.0",
     "farmhash": "^3.0.0",
     "lodash": "^4.17.15",
+    "nats": "^2.0.0-27",
     "pino": "^5.17.0",
     "randomstring": "^1.1.5",
     "ts3-nodejs-library": "^2.3.3"
