--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@hapi/joi": "^17.1.0",
     "awilix": "^4.2.3",
     "body-parser": "^1.19.0",
+    "config": "^3.3.1",
     "express": "^4.17.1",
     "express-pino-logger": "^4.0.0",
     "farmhash": "^3.0.0",
@@ -40,6 +41,7 @@
     "ts3-nodejs-library": "^2.3.3"
   },
   "devDependencies": {
+    "@types/config": "0.0.36",
     "@types/express": "^4.17.2",
     "@types/express-pino-logger": "^4.0.2",
     "@types/glob": "^7.1.1",
